--- a/catalog/templates/contacts.html
+++ b/catalog/templates/contacts.html
@@ -9,15 +9,15 @@
                     <table class="table table-striped">
                         <tr>
                             <td class="w-25">Страна</td>
-                            <td>USA</td>
+                            <td>Россия</td>
                         </tr>
                         <tr>
                             <td class="w-25">ИНН</td>
-                            <td>91-1144442</td>
+                            <td>7708503727</td>
                         </tr>
                         <tr>
                             <td class="w-25">Адрес</td>
-                            <td>Redmond,WA,98052-6399</td>
+                            <td>г. Москва, ул Новая Басманная, д. 2/1, стр. 1</td>
                         </tr>
                     </table>
                 </div>
