--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -8,7 +8,7 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 </head>
 <body>
-{% include 'includes/nav_bar.html' %}
+{% include 'catalog/includes/nav_bar.html' %}
 <div class="pricing-header px-3 py-3 pt-md-2 pb-md-2 mx-auto text-center">
     <h1 class="display-4">Skystore</h1>
     <p class="lead">Skystore - удобный онлайн-магазин</p>
