--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -2,23 +2,25 @@
 {% load my_tags %}
 {% block content %}
 <div class="container">
-    <a class="p-2 btn btn-outline-primary" href="{% url 'articles:create' %}">Создать статью</a>
     <div class="row text-center">
-
+        <a class="p-2 btn btn-outline-primary" href="{% url 'articles:create' %}">Создать статью</a>
+        <div class="pb-4"></div>
+        {% for object in object_list %}
         <div class="col-3">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">{{ object.title }}</h4>
                 </div>
                 <div class="card-body">
-                    <p class="text-start"></p>
+                    <p class="text-start">{{ object.description }}</p>
                     <img class="card-img-top" src="{{ product.photo | media_filter }}" width="300" height="200">
                     <h1 class="card-title pricing-card-title"></h1>
-                    <a class="btn btn-primary" href="" role="button">Подробно</a>
+                    <a class="btn btn-primary" href="{% url 'articles:view' %}" role="button">Подробно</a>
+                    <a class="btn btn-primary" href="{% url 'articles:edit' %}" role="button">Изменить</a>
                 </div>
             </div>
         </div>
-
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
