--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -9,6 +9,7 @@
                     <h4 class="my-0 font-weight-normal">{{ object.title }}</h4>
                 </div>
                 <div class="card-body">
+                    <img class="card-img-top" src="{{ object.photo | media_filter }}" width="300" height="200">
                     <p class="text-start">{{ object.description }}</p>
                     <a class="btn btn-primary" href="{% url 'articles:list'%}" role="button">Назад</a>
                 </div>
