--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -6,14 +6,14 @@
         <a class="p-2 btn btn-outline-primary" href="{% url 'articles:create' %}">Создать статью</a>
         <div class="pb-4"></div>
         {% for object in object_list %}
-        <div class="col-3">
+        <div class="col-4">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">{{ object.title }}</h4>
                 </div>
                 <div class="card-body">
-                    <p class="text-start">{{ object.description }}</p>
-                    <img class="card-img-top" src="{{ product.photo | media_filter }}" width="300" height="200">
+                    <img class="card-img-top" src="{{ object.photo | media_filter }}" width="300" height="200">
+                    <p class="text-start">{{ object.description | slice:100 }}</p>
                     <h1 class="card-title pricing-card-title"></h1>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
