--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -3,13 +3,13 @@
 {% block content %}
 <div class="container">
     <div class="row text-center">
-        <div class="col-6">
+        <div class="col-10">
             <div class="card mb-4 box-shadow">
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">{{ object.title }}</h4>
                 </div>
                 <div class="card-body">
-                    <img class="card-img-top" src="{{ object.photo | media_filter }}" width="300" height="200">
+                    <img class="card-img-top" src="{{ object.photo | media_filter }}">
                     <p class="text-start">{{ object.description }}</p>
                     <a class="btn btn-primary" href="{% url 'articles:list'%}" role="button">Назад</a>
                 </div>
