--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -11,7 +11,7 @@
                 <div class="card-body">
                     <img class="card-img-top" src="{{ object.photo | media_filter }}">
                     <p class="text-start">{{ object.description }}</p>
-                    <a class="btn btn-primary" href="{% url 'articles:list'%}" role="button">Назад</a>
+                    <a class="btn btn-primary" href="{% url 'articles:article_list'%}" role="button">Назад</a>
                 </div>
             </div>
         </div>
