--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -3,6 +3,8 @@
 {% block content %}
 <div class="container">
     <div class="row text-center">
+        <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:product_create' %}">Создать продукт</a>
+        <div class="pb-4"></div>
         {%  for product in object_list %}
         <div class="col-4">
             <div class="card mb-4 box-shadow">
@@ -14,6 +16,8 @@
                     <img class="card-img-top" src="{{ product.photo | media_filter }}" width="300" height="200">
                     <h1 class="card-title pricing-card-title"></h1>
                     <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Подробно</a>
+                    <a class="btn btn-sm btn-outline-secondary" href="{% url 'catalog:product_edit' product.pk %}" role="button">Изменить</a>
+                    <a class="btn btn-sm btn-outline-danger" href="{% url 'catalog:product_delete' product.pk %}" role="button">Удалить</a>
                 </div>
             </div>
         </div>
