--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <div class="row text-center">
-        <a class="p-2 btn btn-outline-primary" href="{% url 'articles:create' %}">Создать статью</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'articles:article_create' %}">Создать статью</a>
         <div class="pb-4"></div>
         {% for object in object_list %}
         <div class="col-4">
@@ -17,11 +17,11 @@
                     <h1 class="card-title pricing-card-title"></h1>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <a class="btn btn-sm btn-outline-secondary" href="{% url 'articles:view' object.id %}"
+                            <a class="btn btn-sm btn-outline-secondary" href="{% url 'articles:article_view' object.id %}"
                                role="button">Подробно</a>
-                            <a class="btn btn-sm btn-outline-secondary" href="{% url 'articles:edit' object.id %}"
+                            <a class="btn btn-sm btn-outline-secondary" href="{% url 'articles:article_edit' object.id %}"
                                role="button">Изменить</a>
-                            <a class="btn btn-sm btn-outline-danger" href="{% url 'articles:delete' object.id %}"
+                            <a class="btn btn-sm btn-outline-danger" href="{% url 'articles:article_delete' object.id %}"
                                role="button">Удалить</a>
                         </div>
                     </div>
