--- a/catalog/templates/catalog/product_confirm_delete.html
+++ b/catalog/templates/catalog/product_confirm_delete.html
@@ -10,9 +10,9 @@
                         <div class="card-body">
                             <form method="post">
                                 {% csrf_token %}
-                                <p>Хотите удалить статью "{{ object.title }}"?</p>
+                                <p>Хотите удалить продукт "{{ object.name }}"?</p>
                                 <button type="submit" class="btn btn-danger">Подтвердить</button>
-                                <a class="btn btn-primary" href="{% url 'articles:article_list' %}" role="button">Отмена</a>
+                                <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Отмена</a>
                             </form>
                         </div>
                     </div>
