--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -13,7 +13,7 @@
                     <img src="{{ product.photo | media_filter }}" class="rounded mx-auto d-block" width="300" height="200">
                     <h1 class="card-title pricing-card-title">{{ object.price }} RUB </h1>
                     <a class="btn btn-primary" href="#" role="button">Купить</a>
-                    <a class="btn btn-primary" href="{% url 'catalog:products_list'%}" role="button">Назад</a>
+                    <a class="btn btn-primary" href="{% url 'catalog:product_list'%}" role="button">Назад</a>
                 </div>
             </div>
         </div>
