--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -4,26 +4,44 @@
 <div class="container">
     <div class="row text">
         <div class="col-12">
-            <div class="row">
-                <div class="col-8">
+            <form class="row" method="post" enctype="multipart/form-data">
+                <div class="col-6">
                     <div class="card">
+                        {% if object %}
+                        <p class='card-text'>Редактирование продукта</p>
+                        {% else %}
+                        <p class='card-text'>Создание продукта</p>
+                        {% endif %}
                         <div class="card-body">
-                            <form method="post" enctype="multipart/form-data">
-                                {% csrf_token %}
-                                {{ form.as_p }}
-                                <button type="submit" class="btn btn-success">
-                                    {% if object %}
-                                    Сохранить
-                                    {% else %}
-                                    Создать
-                                    {% endif %}
-                                </button>
-                                <a class="btn btn-primary" href="{% url 'catalog:product_list' %}" role="button">Отмена</a>
-                            </form>
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <button type="submit" class="btn btn-success">
+                                {% if object %}
+                                Сохранить
+                                {% else %}
+                                Создать
+                                {% endif %}
+                            </button>
+                            <a class="btn btn-primary" href="{% url 'catalog:product_list' %}"
+                               role="button">Отмена</a>
                         </div>
                     </div>
                 </div>
-            </div>
+                {% if object %}
+                <div class="col-6">
+                    <div class="card">
+                        <p class='card-text'>Создание версии</p>
+                        <div class="card-body">
+                            {{ formset.management_form }}
+                            {% for form in formset.forms %}
+                            {{ form.as_p }}
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
+
+            </form>
         </div>
     </div>
 </div>
