--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -3,7 +3,9 @@
 {% block content %}
 <div class="container">
     <div class="row text-center">
+        {% if user.is_authenticated %}
         <a class="p-2 btn btn-outline-primary" href="{% url 'articles:article_create' %}">Создать статью</a>
+        {% endif %}
         <div class="pb-4"></div>
         {% for object in object_list %}
         <div class="col-4">
@@ -19,10 +21,12 @@
                         <div class="btn-group">
                             <a class="btn btn-sm btn-outline-secondary" href="{% url 'articles:article_view' object.id %}"
                                role="button">Подробно</a>
+                            {% if user.is_authenticated %}
                             <a class="btn btn-sm btn-outline-secondary" href="{% url 'articles:article_edit' object.id %}"
                                role="button">Изменить</a>
                             <a class="btn btn-sm btn-outline-danger" href="{% url 'articles:article_delete' object.id %}"
                                role="button">Удалить</a>
+                            {% endif %}
                         </div>
                 </div>
             </div>
