--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -3,7 +3,9 @@
 {% block content %}
 <div class="container">
     <div class="row text-center">
+        {% if user.is_authenticated %}
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:product_create' %}">Создать продукт</a>
+        {% endif %}
         <div class="pb-4"></div>
         {% for product in object_list %}
         <div class="col-4">
@@ -18,10 +20,12 @@
                     <div class="btn-group">
                         <a class="btn btn-sm btn-outline-secondary" href="{% url 'catalog:product_detail' product.pk %}"
                            role="button">Подробно</a>
+                        {% if user.is_authenticated %}
                         <a class="btn btn-sm btn-outline-secondary" href="{% url 'catalog:product_edit' product.pk %}"
                            role="button">Изменить</a>
                         <a class="btn btn-sm btn-outline-danger" href="{% url 'catalog:product_delete' product.pk %}"
                            role="button">Удалить</a>
+                        {% endif %}
                     </div>
                 </div>
                 <p class="card-footer"> Актуальная версия продукта: {{ product.active_version }}</p>
