--- a/users/templates/users/reset_password.html
+++ b/users/templates/users/reset_password.html
@@ -7,12 +7,13 @@
             <form class="row" method="post" enctype="multipart/form-data">
                 <div class="col-6">
                     <div class="card">
+                        <div class="card-header">
+                            <h4 class="my-0 font-weight-normal">Введите адрес электронной почты для отправки пароля</h4>
+                        </div>
                         <div class="card-body">
                             {% csrf_token %}
                             {{ form.as_p }}
-                            <button type="submit" class="btn btn-success">Войти</button>
-                            <a class="btn btn-link" href="{% url 'users:reset_password' %}"
-                               role="button">Восcтановить пароль</a>
+                            <button type="submit" class="btn btn-success">Отправить</button>
                         </div>
                     </div>
                 </div>
