--- a/users/templates/users/not_mail.html
+++ b/users/templates/users/not_mail.html
@@ -4,13 +4,11 @@
 <div class="container">
     <div class="row text">
         <div class="col-12">
-
                 <div class="col-6">
                     <div class="card">
-                        <p>Данный пользователь не найден. Проверьте адрес электронной почты</p>
+                        <p>Данный пользователь не найден. Проверьте адрес электронной почты.</p>
                     </div>
                 </div>
-
         </div>
     </div>
 </div>
