--- a/articles/templates/articles/article_list.html
+++ b/articles/templates/articles/article_list.html
@@ -21,7 +21,7 @@
                         <div class="btn-group">
                             <a class="btn btn-sm btn-outline-secondary" href="{% url 'articles:article_view' object.id %}"
                                role="button">Подробно</a>
-                            {% if user.is_authenticated %}
+                            {% if perms.catalog.can_edit_description and perms.catalog.can_edit_category and perms.catalog.can_edit_is_publication or user == product.creator%}
                             <a class="btn btn-sm btn-outline-secondary" href="{% url 'articles:article_edit' object.id %}"
                                role="button">Изменить</a>
                             <a class="btn btn-sm btn-outline-danger" href="{% url 'articles:article_delete' object.id %}"
