--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -10,13 +10,22 @@
                 </div>
                 <div class="card-body">
                     <p class="text-start">{{ object.description }}</p>
-                    <img src="{{ product.photo | media_filter }}" class="rounded mx-auto d-block" width="300" height="200">
+                    <img src="{{ product.photo | media_filter }}" class="rounded mx-auto d-block" width="300"
+                         height="200">
                     <h1 class="card-title pricing-card-title">{{ object.price }} RUB </h1>
                     <a class="btn btn-primary" href="#" role="button">Купить</a>
                     <a class="btn btn-primary" href="{% url 'catalog:product_list'%}" role="button">Назад</a>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-{% endblock %}
+        <div class="col-6">
+                <div class="card mb-4 box-shadow">
+                    <div class="card-header">
+                        <h4 class="my-0 font-weight-normal">Категория продукта</h4>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <p class="text-start">{{ object.category }}</p>
+                </div>
+            </div>
+        {% endblock %}
